--- a/public/output.css
+++ b/public/output.css
@@ -599,64 +599,20 @@ video {
   }
 }
 
+.ml-1 {
+  margin-left: 0.25rem;
+}
+
 .mr-6 {
   margin-right: 1.5rem;
-}
-
-.mr-8 {
-  margin-right: 2rem;
-}
-
-.mr-10 {
-  margin-right: 2.5rem;
-}
-
-.mr-12 {
-  margin-right: 3rem;
-}
-
-.ml-2 {
-  margin-left: 0.5rem;
-}
-
-.mt-2 {
-  margin-top: 0.5rem;
 }
 
 .mt-1 {
   margin-top: 0.25rem;
 }
 
-.ml-4 {
-  margin-left: 1rem;
-}
-
-.ml-3 {
-  margin-left: 0.75rem;
-}
-
-.ml-1 {
-  margin-left: 0.25rem;
-}
-
-.mt-4 {
-  margin-top: 1rem;
-}
-
-.mt-3 {
-  margin-top: 0.75rem;
-}
-
-.ml-200 {
-  margin-left: 1rem;
-}
-
-.mt-\[\.8rem\] {
-  margin-top: .8rem;
-}
-
-.mr-500 {
-  margin-right: 3rem;
+.mt-\[\.3rem\] {
+  margin-top: .3rem;
 }
 
 .flex {
@@ -671,24 +627,16 @@ video {
   height: 3.5rem;
 }
 
-.h-auto {
-  height: auto;
-}
-
 .w-14 {
   width: 3.5rem;
 }
 
-.w-auto {
-  width: auto;
+.w-full {
+  width: 100%;
 }
 
 .flex-row {
   flex-direction: row;
-}
-
-.flex-col {
-  flex-direction: column;
 }
 
 .items-center {
@@ -714,21 +662,6 @@ video {
   padding-bottom: 1rem;
 }
 
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
-}
-
-.py-6 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
-
-.py-7 {
-  padding-top: 1.75rem;
-  padding-bottom: 1.75rem;
-}
-
 .font-GT-America {
   font-family: "GT-America", sans-serif;
 }
@@ -738,68 +671,12 @@ video {
   line-height: 1;
 }
 
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
-
-.text-\[1\.7rem\] {
-  font-size: 1.7rem;
-}
-
-.text-\[1\.6rem\] {
-  font-size: 1.6rem;
-}
-
-.text-\[2\.1rem\] {
-  font-size: 2.1rem;
-}
-
-.text-\[1\.65rem\] {
-  font-size: 1.65rem;
-}
-
 .text-\[1\.62rem\] {
   font-size: 1.62rem;
 }
 
 .text-\[2rem\] {
   font-size: 2rem;
-}
-
-.font-normal {
-  font-weight: 400;
-}
-
-.font-bold {
-  font-weight: 700;
-}
-
-.font-semibold {
-  font-weight: 600;
-}
-
-.font-medium {
-  font-weight: 500;
-}
-
-.font-light {
-  font-weight: 300;
 }
 
 .font-extralight {
@@ -812,8 +689,11 @@ video {
 }
 
 @media (min-width: 1024px) {
-  .lg\:bg-blue-200 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(76 95 213 / var(--tw-bg-opacity));
+  .lg\:inline {
+    display: inline;
+  }
+
+  .lg\:hidden {
+    display: none;
   }
 }
