--- a/public/output.css
+++ b/public/output.css
@@ -603,6 +603,14 @@ video {
   margin-left: 0.25rem;
 }
 
+.ml-4 {
+  margin-left: 1rem;
+}
+
+.ml-\[\.52rem\] {
+  margin-left: .52rem;
+}
+
 .mr-6 {
   margin-right: 1.5rem;
 }
@@ -663,7 +671,7 @@ video {
 }
 
 .font-GT-America {
-  font-family: "GT-America", sans-serif;
+  font-family: GT America Trial, sans-serif;
 }
 
 .text-7xl {
@@ -671,8 +679,8 @@ video {
   line-height: 1;
 }
 
-.text-\[1\.62rem\] {
-  font-size: 1.62rem;
+.text-\[1\.57rem\] {
+  font-size: 1.57rem;
 }
 
 .text-\[2rem\] {
@@ -686,6 +694,15 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+@font-face {
+  font-family: "GT-America";
+
+  font-weight: 400;
+
+  src: url("/public/fonts/gt-america-standard-medium-trial-webfont.woff2")
+    format("woff2");
 }
 
 @media (min-width: 1024px) {
