--- a/public/output.css
+++ b/public/output.css
@@ -554,28 +554,32 @@ video {
   --tw-contain-style:  ;
 }
 
-.ml-1 {
-  margin-left: 0.25rem;
+.ml-24 {
+  margin-left: 6rem;
 }
 
 .ml-4 {
   margin-left: 1rem;
 }
 
-.ml-\[\.52rem\] {
-  margin-left: .52rem;
+.ml-\[\.45rem\] {
+  margin-left: .45rem;
 }
 
 .mr-6 {
   margin-right: 1.5rem;
 }
 
+.mr-\[\.5rem\] {
+  margin-right: .5rem;
+}
+
 .mt-1 {
   margin-top: 0.25rem;
 }
 
-.mt-\[\.3rem\] {
-  margin-top: .3rem;
+.mt-\[\.4rem\] {
+  margin-top: .4rem;
 }
 
 .flex {
@@ -620,9 +624,9 @@ video {
   background-color: rgb(76 95 213 / var(--tw-bg-opacity));
 }
 
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
 }
 
 .font-GT-America {
@@ -634,16 +638,20 @@ video {
   line-height: 1;
 }
 
-.text-\[1\.57rem\] {
-  font-size: 1.57rem;
+.text-\[1\.45rem\] {
+  font-size: 1.45rem;
 }
 
 .text-\[2rem\] {
   font-size: 2rem;
 }
 
-.font-extralight {
-  font-weight: 200;
+.font-semibold {
+  font-weight: 600;
+}
+
+.font-thin {
+  font-weight: 100;
 }
 
 .text-white {
