--- a/public/output.css
+++ b/public/output.css
@@ -582,6 +582,50 @@ video {
   margin-top: .4rem;
 }
 
+.ml-16 {
+  margin-left: 4rem;
+}
+
+.mt-4 {
+  margin-top: 1rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
+.mt-\[\.56rem\] {
+  margin-top: .56rem;
+}
+
+.mt-\[\.57rem\] {
+  margin-top: .57rem;
+}
+
+.ml-20 {
+  margin-left: 5rem;
+}
+
+.mr-2 {
+  margin-right: 0.5rem;
+}
+
+.mr-1 {
+  margin-right: 0.25rem;
+}
+
+.ml-\[5\.5rem\] {
+  margin-left: 5.5rem;
+}
+
+.mr-\[\.35rem\] {
+  margin-right: .35rem;
+}
+
+.mr-\[\.4rem\] {
+  margin-right: .4rem;
+}
+
 .flex {
   display: flex;
 }
@@ -590,8 +634,27 @@ video {
   display: none;
 }
 
+.size-10 {
+  width: 2.5rem;
+  height: 2.5rem;
+}
+
+.size-8 {
+  width: 2rem;
+  height: 2rem;
+}
+
+.size-9 {
+  width: 2.25rem;
+  height: 2.25rem;
+}
+
 .h-14 {
   height: 3.5rem;
+}
+
+.h-10 {
+  height: 2.5rem;
 }
 
 .w-14 {
@@ -600,6 +663,10 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-10 {
+  width: 2.5rem;
 }
 
 .flex-row {
