--- a/public/output.css
+++ b/public/output.css
@@ -554,8 +554,49 @@ video {
   --tw-contain-style:  ;
 }
 
-.ml-24 {
-  margin-left: 6rem;
+.debug-screens::before {
+  position: fixed;
+  z-index: 2147483647;
+  bottom: 0;
+  left: 0;
+  padding: .3333333em .5em;
+  font-size: 12px;
+  line-height: 1;
+  font-family: sans-serif;
+  background-color: #000;
+  color: #fff;
+  box-shadow: 0 0 0 1px #fff;
+  content: 'screen: _';
+}
+
+@media (min-width: 640px) {
+  .debug-screens::before {
+    content: 'screen: sm';
+  }
+}
+
+@media (min-width: 768px) {
+  .debug-screens::before {
+    content: 'screen: md';
+  }
+}
+
+@media (min-width: 1024px) {
+  .debug-screens::before {
+    content: 'screen: lg';
+  }
+}
+
+@media (min-width: 1280px) {
+  .debug-screens::before {
+    content: 'screen: xl';
+  }
+}
+
+@media (min-width: 1536px) {
+  .debug-screens::before {
+    content: 'screen: 2xl';
+  }
 }
 
 .ml-4 {
@@ -566,8 +607,16 @@ video {
   margin-left: .45rem;
 }
 
+.ml-\[5\.5rem\] {
+  margin-left: 5.5rem;
+}
+
 .mr-6 {
   margin-right: 1.5rem;
+}
+
+.mr-\[\.4rem\] {
+  margin-right: .4rem;
 }
 
 .mr-\[\.5rem\] {
@@ -582,48 +631,28 @@ video {
   margin-top: .4rem;
 }
 
-.ml-16 {
-  margin-left: 4rem;
-}
-
-.mt-4 {
-  margin-top: 1rem;
-}
-
-.mt-2 {
-  margin-top: 0.5rem;
-}
-
-.mt-\[\.56rem\] {
-  margin-top: .56rem;
-}
-
 .mt-\[\.57rem\] {
   margin-top: .57rem;
 }
 
-.ml-20 {
-  margin-left: 5rem;
+.mt-\[3\.3rem\] {
+  margin-top: 3.3rem;
 }
 
-.mr-2 {
-  margin-right: 0.5rem;
+.mt-\[3\.1rem\] {
+  margin-top: 3.1rem;
 }
 
-.mr-1 {
-  margin-right: 0.25rem;
+.mt-\[3\.2rem\] {
+  margin-top: 3.2rem;
 }
 
-.ml-\[5\.5rem\] {
-  margin-left: 5.5rem;
+.mt-\[3\.15rem\] {
+  margin-top: 3.15rem;
 }
 
-.mr-\[\.35rem\] {
-  margin-right: .35rem;
-}
-
-.mr-\[\.4rem\] {
-  margin-right: .4rem;
+.mt-\[3\.12rem\] {
+  margin-top: 3.12rem;
 }
 
 .flex {
@@ -632,16 +661,6 @@ video {
 
 .hidden {
   display: none;
-}
-
-.size-10 {
-  width: 2.5rem;
-  height: 2.5rem;
-}
-
-.size-8 {
-  width: 2rem;
-  height: 2rem;
 }
 
 .size-9 {
@@ -653,10 +672,6 @@ video {
   height: 3.5rem;
 }
 
-.h-10 {
-  height: 2.5rem;
-}
-
 .w-14 {
   width: 3.5rem;
 }
@@ -665,12 +680,12 @@ video {
   width: 100%;
 }
 
-.w-10 {
-  width: 2.5rem;
-}
-
 .flex-row {
   flex-direction: row;
+}
+
+.flex-col {
+  flex-direction: column;
 }
 
 .items-center {
@@ -681,9 +696,31 @@ video {
   justify-content: center;
 }
 
+.rounded-md {
+  border-radius: 0.375rem;
+}
+
+.border-\[1px\] {
+  border-width: 1px;
+}
+
+.border-solid {
+  border-style: solid;
+}
+
+.border-black {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-blue-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(218 219 241 / var(--tw-bg-opacity));
 }
 
 .bg-blue-200 {
@@ -691,26 +728,88 @@ video {
   background-color: rgb(76 95 213 / var(--tw-bg-opacity));
 }
 
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.px-\[\.85rem\] {
+  padding-left: .85rem;
+  padding-right: .85rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
 .py-5 {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
+}
+
+.pb-\[6\.5rem\] {
+  padding-bottom: 6.5rem;
+}
+
+.pt-20 {
+  padding-top: 5rem;
+}
+
+.pb-\[6\.7rem\] {
+  padding-bottom: 6.7rem;
+}
+
+.pb-\[6\.9rem\] {
+  padding-bottom: 6.9rem;
+}
+
+.pb-28 {
+  padding-bottom: 7rem;
+}
+
+.pb-\[7\.1rem\] {
+  padding-bottom: 7.1rem;
+}
+
+.pb-\[7\.15rem\] {
+  padding-bottom: 7.15rem;
+}
+
+.pb-\[7\.2rem\] {
+  padding-bottom: 7.2rem;
+}
+
+.pb-\[7\.3rem\] {
+  padding-bottom: 7.3rem;
 }
 
 .font-GT-America {
   font-family: GT America Trial, sans-serif;
 }
 
-.text-7xl {
-  font-size: 4.5rem;
-  line-height: 1;
+.text-\[1\.28rem\] {
+  font-size: 1.28rem;
 }
 
 .text-\[1\.45rem\] {
   font-size: 1.45rem;
 }
 
+.text-\[2\.5rem\] {
+  font-size: 2.5rem;
+}
+
 .text-\[2rem\] {
   font-size: 2rem;
+}
+
+.text-\[1\.29rem\] {
+  font-size: 1.29rem;
+}
+
+.font-medium {
+  font-weight: 500;
 }
 
 .font-semibold {
@@ -721,9 +820,154 @@ video {
   font-weight: 100;
 }
 
+.leading-10 {
+  line-height: 2.5rem;
+}
+
+.tracking-\[-\.25rem\] {
+  letter-spacing: -.25rem;
+}
+
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.shadow-\[0px_4px_14px_6px_\#e2e8f0\] {
+  --tw-shadow: 0px 4px 14px 6px #e2e8f0;
+  --tw-shadow-colored: 0px 4px 14px 6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0px_3px_14px_6px_\#718096\] {
+  --tw-shadow: 0px 3px 14px 6px #718096;
+  --tw-shadow-colored: 0px 3px 14px 6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0px_3px_14px_6px_\#a0aec0\] {
+  --tw-shadow: 0px 3px 14px 6px #a0aec0;
+  --tw-shadow-colored: 0px 3px 14px 6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0px_3px_14px_6px_\#cbd5e0\] {
+  --tw-shadow: 0px 3px 14px 6px #cbd5e0;
+  --tw-shadow-colored: 0px 3px 14px 6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0px_3px_14px_11px_\#cbd5e0\] {
+  --tw-shadow: 0px 3px 14px 11px #cbd5e0;
+  --tw-shadow-colored: 0px 3px 14px 11px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0px_14px_16px_0px_\#cbd5e0\] {
+  --tw-shadow: 0px 14px 16px 0px #cbd5e0;
+  --tw-shadow-colored: 0px 14px 16px 0px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0px_14px_20px_6px_\#cbd5e0\] {
+  --tw-shadow: 0px 14px 20px 6px #cbd5e0;
+  --tw-shadow-colored: 0px 14px 20px 6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0px_14px_20px_45px_\#cbd5e0\] {
+  --tw-shadow: 0px 14px 20px 45px #cbd5e0;
+  --tw-shadow-colored: 0px 14px 20px 45px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0px_14px_20px_45px_\#a0aec0\] {
+  --tw-shadow: 0px 14px 20px 45px #a0aec0;
+  --tw-shadow-colored: 0px 14px 20px 45px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0px_14px_22px_1px_\#a0aec0\] {
+  --tw-shadow: 0px 14px 22px 1px #a0aec0;
+  --tw-shadow-colored: 0px 14px 22px 1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0px_8px_19px_0px_\#a0aec0\] {
+  --tw-shadow: 0px 8px 19px 0px #a0aec0;
+  --tw-shadow-colored: 0px 8px 19px 0px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0px_4px_15px_0px_\#a0aec0\] {
+  --tw-shadow: 0px 4px 15px 0px #a0aec0;
+  --tw-shadow-colored: 0px 4px 15px 0px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0px_4px_11px_0px_\#a0aec0\] {
+  --tw-shadow: 0px 4px 11px 0px #a0aec0;
+  --tw-shadow-colored: 0px 4px 11px 0px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0px_4px_11px_0px_\#94a3b8\] {
+  --tw-shadow: 0px 4px 11px 0px #94a3b8;
+  --tw-shadow-colored: 0px 4px 11px 0px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0px_4px_11px_0px_\#cbd5e1\] {
+  --tw-shadow: 0px 4px 11px 0px #cbd5e1;
+  --tw-shadow-colored: 0px 4px 11px 0px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0px_4px_11px_0px_c9d3dd\] {
+  --tw-shadow: 0px 4px 11px 0px c9d3dd;
+  --tw-shadow-colored: 0px 4px 11px 0px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0px_7px_20px_2px_c9d3dd\] {
+  --tw-shadow: 0px 7px 20px 2px c9d3dd;
+  --tw-shadow-colored: 0px 7px 20px 2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0px_7px_20px_2px_\#c9d3dd\] {
+  --tw-shadow: 0px 7px 20px 2px #c9d3dd;
+  --tw-shadow-colored: 0px 7px 20px 2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0px_7px_20px_2px_\#c0cad3\] {
+  --tw-shadow: 0px 7px 20px 2px #c0cad3;
+  --tw-shadow-colored: 0px 7px 20px 2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0px_7px_20px_2px_\#0000\] {
+  --tw-shadow: 0px 7px 20px 2px #0000;
+  --tw-shadow-colored: 0px 7px 20px 2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0px_7px_20px_2px_c0cad3\] {
+  --tw-shadow: 0px 7px 20px 2px c0cad3;
+  --tw-shadow-colored: 0px 7px 20px 2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0px_7px_20px_2px_\#b9c3cc\] {
+  --tw-shadow: 0px 7px 20px 2px #b9c3cc;
+  --tw-shadow-colored: 0px 7px 20px 2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 @font-face {
