--- a/public/output.css
+++ b/public/output.css
@@ -615,6 +615,70 @@ video {
   top: 3.7rem;
 }
 
+.right-4 {
+  right: 1rem;
+}
+
+.right-6 {
+  right: 1.5rem;
+}
+
+.right-5 {
+  right: 1.25rem;
+}
+
+.right-\[1\.15rem\] {
+  right: 1.15rem;
+}
+
+.top-5 {
+  top: 1.25rem;
+}
+
+.top-10 {
+  top: 2.5rem;
+}
+
+.top-9 {
+  top: 2.25rem;
+}
+
+.top-8 {
+  top: 2rem;
+}
+
+.top-7 {
+  top: 1.75rem;
+}
+
+.top-12 {
+  top: 3rem;
+}
+
+.top-16 {
+  top: 4rem;
+}
+
+.top-20 {
+  top: 5rem;
+}
+
+.top-\[4\.5rem\] {
+  top: 4.5rem;
+}
+
+.top-\[4\.2rem\] {
+  top: 4.2rem;
+}
+
+.top-\[4\.4rem\] {
+  top: 4.4rem;
+}
+
+.top-\[4\.3rem\] {
+  top: 4.3rem;
+}
+
 .ml-4 {
   margin-left: 1rem;
 }
@@ -655,6 +719,26 @@ video {
   margin-top: 3.12rem;
 }
 
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
+.mt-\[\.35rem\] {
+  margin-top: .35rem;
+}
+
+.mt-\[\.6rem\] {
+  margin-top: .6rem;
+}
+
+.mt-\[\.7rem\] {
+  margin-top: .7rem;
+}
+
+.mt-\[\.65rem\] {
+  margin-top: .65rem;
+}
+
 .flex {
   display: flex;
 }
@@ -677,12 +761,48 @@ video {
   height: 3.5rem;
 }
 
+.h-10 {
+  height: 2.5rem;
+}
+
+.h-9 {
+  height: 2.25rem;
+}
+
+.h-6 {
+  height: 1.5rem;
+}
+
+.h-8 {
+  height: 2rem;
+}
+
 .w-14 {
   width: 3.5rem;
 }
 
 .w-full {
   width: 100%;
+}
+
+.w-\[8\.4rem\] {
+  width: 8.4rem;
+}
+
+.w-\[8\.2rem\] {
+  width: 8.2rem;
+}
+
+.w-\[8\.15rem\] {
+  width: 8.15rem;
+}
+
+.w-9 {
+  width: 2.25rem;
+}
+
+.w-8 {
+  width: 2rem;
 }
 
 .flex-row {
@@ -703,6 +823,22 @@ video {
 
 .rounded-md {
   border-radius: 0.375rem;
+}
+
+.rounded-sm {
+  border-radius: 0.125rem;
+}
+
+.rounded-\[\.215\] {
+  border-radius: .215;
+}
+
+.rounded-\[\.215rem\] {
+  border-radius: .215rem;
+}
+
+.rounded-\[\.225rem\] {
+  border-radius: .225rem;
 }
 
 .border-\[1px\] {
@@ -751,6 +887,21 @@ video {
 .py-5 {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
+}
+
+.py-\[1\.3rem\] {
+  padding-top: 1.3rem;
+  padding-bottom: 1.3rem;
+}
+
+.py-\[1\.2rem\] {
+  padding-top: 1.2rem;
+  padding-bottom: 1.2rem;
+}
+
+.py-\[1\.1rem\] {
+  padding-top: 1.1rem;
+  padding-bottom: 1.1rem;
 }
 
 .pb-\[7\.35rem\] {
