--- a/public/output.css
+++ b/public/output.css
@@ -611,68 +611,8 @@ video {
   right: 0.75rem;
 }
 
-.top-\[3\.7rem\] {
-  top: 3.7rem;
-}
-
-.right-4 {
-  right: 1rem;
-}
-
-.right-6 {
-  right: 1.5rem;
-}
-
-.right-5 {
-  right: 1.25rem;
-}
-
-.right-\[1\.15rem\] {
-  right: 1.15rem;
-}
-
-.top-5 {
-  top: 1.25rem;
-}
-
 .top-10 {
   top: 2.5rem;
-}
-
-.top-9 {
-  top: 2.25rem;
-}
-
-.top-8 {
-  top: 2rem;
-}
-
-.top-7 {
-  top: 1.75rem;
-}
-
-.top-12 {
-  top: 3rem;
-}
-
-.top-16 {
-  top: 4rem;
-}
-
-.top-20 {
-  top: 5rem;
-}
-
-.top-\[4\.5rem\] {
-  top: 4.5rem;
-}
-
-.top-\[4\.2rem\] {
-  top: 4.2rem;
-}
-
-.top-\[4\.4rem\] {
-  top: 4.4rem;
 }
 
 .top-\[4\.3rem\] {
@@ -695,48 +635,24 @@ video {
   margin-right: 1.5rem;
 }
 
-.mr-\[\.4rem\] {
-  margin-right: .4rem;
-}
-
 .mr-\[\.5rem\] {
   margin-right: .5rem;
-}
-
-.mt-1 {
-  margin-top: 0.25rem;
-}
-
-.mt-\[\.4rem\] {
-  margin-top: .4rem;
-}
-
-.mt-\[\.57rem\] {
-  margin-top: .57rem;
-}
-
-.mt-\[3\.12rem\] {
-  margin-top: 3.12rem;
-}
-
-.mt-2 {
-  margin-top: 0.5rem;
 }
 
 .mt-\[\.35rem\] {
   margin-top: .35rem;
 }
 
-.mt-\[\.6rem\] {
-  margin-top: .6rem;
-}
-
-.mt-\[\.7rem\] {
-  margin-top: .7rem;
+.mt-\[\.4rem\] {
+  margin-top: .4rem;
 }
 
 .mt-\[\.65rem\] {
   margin-top: .65rem;
+}
+
+.mt-\[3\.12rem\] {
+  margin-top: 3.12rem;
 }
 
 .flex {
@@ -747,26 +663,58 @@ video {
   display: none;
 }
 
+.size-8 {
+  width: 2rem;
+  height: 2rem;
+}
+
+.size-72 {
+  width: 18rem;
+  height: 18rem;
+}
+
+.size-6 {
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
 .size-12 {
   width: 3rem;
   height: 3rem;
 }
 
-.size-9 {
-  width: 2.25rem;
-  height: 2.25rem;
+.size-14 {
+  width: 3.5rem;
+  height: 3.5rem;
+}
+
+.size-32 {
+  width: 8rem;
+  height: 8rem;
+}
+
+.size-24 {
+  width: 6rem;
+  height: 6rem;
+}
+
+.size-16 {
+  width: 4rem;
+  height: 4rem;
+}
+
+.size-20 {
+  width: 5rem;
+  height: 5rem;
+}
+
+.size-28 {
+  width: 7rem;
+  height: 7rem;
 }
 
 .h-14 {
   height: 3.5rem;
-}
-
-.h-10 {
-  height: 2.5rem;
-}
-
-.h-9 {
-  height: 2.25rem;
 }
 
 .h-6 {
@@ -777,32 +725,76 @@ video {
   height: 2rem;
 }
 
+.h-9 {
+  height: 2.25rem;
+}
+
+.h-24 {
+  height: 6rem;
+}
+
+.h-16 {
+  height: 4rem;
+}
+
+.h-20 {
+  height: 5rem;
+}
+
+.h-\[4\.15rem\] {
+  height: 4.15rem;
+}
+
+.h-\[4\.2rem\] {
+  height: 4.2rem;
+}
+
+.h-\[4\.3rem\] {
+  height: 4.3rem;
+}
+
+.h-\[4\.4rem\] {
+  height: 4.4rem;
+}
+
+.h-\[4\.7rem\] {
+  height: 4.7rem;
+}
+
 .w-14 {
   width: 3.5rem;
 }
 
-.w-full {
-  width: 100%;
-}
-
-.w-\[8\.4rem\] {
-  width: 8.4rem;
-}
-
-.w-\[8\.2rem\] {
-  width: 8.2rem;
-}
-
-.w-\[8\.15rem\] {
-  width: 8.15rem;
+.w-8 {
+  width: 2rem;
 }
 
 .w-9 {
   width: 2.25rem;
 }
 
-.w-8 {
-  width: 2rem;
+.w-\[8\.15rem\] {
+  width: 8.15rem;
+}
+
+.w-full {
+  width: 100%;
+}
+
+.w-20 {
+  width: 5rem;
+}
+
+.w-16 {
+  width: 4rem;
+}
+
+.w-\[4\.15rem\] {
+  width: 4.15rem;
+}
+
+.transform {
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .flex-row {
@@ -819,22 +811,6 @@ video {
 
 .justify-center {
   justify-content: center;
-}
-
-.rounded-md {
-  border-radius: 0.375rem;
-}
-
-.rounded-sm {
-  border-radius: 0.125rem;
-}
-
-.rounded-\[\.215\] {
-  border-radius: .215;
-}
-
-.rounded-\[\.215rem\] {
-  border-radius: .215rem;
 }
 
 .rounded-\[\.225rem\] {
@@ -889,21 +865,6 @@ video {
   padding-bottom: 1.25rem;
 }
 
-.py-\[1\.3rem\] {
-  padding-top: 1.3rem;
-  padding-bottom: 1.3rem;
-}
-
-.py-\[1\.2rem\] {
-  padding-top: 1.2rem;
-  padding-bottom: 1.2rem;
-}
-
-.py-\[1\.1rem\] {
-  padding-top: 1.1rem;
-  padding-bottom: 1.1rem;
-}
-
 .pb-\[7\.35rem\] {
   padding-bottom: 7.35rem;
 }
@@ -952,19 +913,9 @@ video {
   letter-spacing: -.25rem;
 }
 
-.text-black {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
-}
-
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-blue-200 {
-  --tw-text-opacity: 1;
-  color: rgb(76 95 213 / var(--tw-text-opacity));
 }
 
 .shadow-\[0px_7px_20px_2px_\#b9c3cc\] {
