--- a/public/output.css
+++ b/public/output.css
@@ -631,6 +631,10 @@ video {
   margin-left: 5.5rem;
 }
 
+.mr-10 {
+  margin-right: 2.5rem;
+}
+
 .mr-6 {
   margin-right: 1.5rem;
 }
@@ -655,6 +659,18 @@ video {
   margin-top: 3.12rem;
 }
 
+.mr-9 {
+  margin-right: 2.25rem;
+}
+
+.mr-8 {
+  margin-right: 2rem;
+}
+
+.mr-7 {
+  margin-right: 1.75rem;
+}
+
 .flex {
   display: flex;
 }
@@ -666,51 +682,6 @@ video {
 .size-8 {
   width: 2rem;
   height: 2rem;
-}
-
-.size-72 {
-  width: 18rem;
-  height: 18rem;
-}
-
-.size-6 {
-  width: 1.5rem;
-  height: 1.5rem;
-}
-
-.size-12 {
-  width: 3rem;
-  height: 3rem;
-}
-
-.size-14 {
-  width: 3.5rem;
-  height: 3.5rem;
-}
-
-.size-32 {
-  width: 8rem;
-  height: 8rem;
-}
-
-.size-24 {
-  width: 6rem;
-  height: 6rem;
-}
-
-.size-16 {
-  width: 4rem;
-  height: 4rem;
-}
-
-.size-20 {
-  width: 5rem;
-  height: 5rem;
-}
-
-.size-28 {
-  width: 7rem;
-  height: 7rem;
 }
 
 .h-14 {
@@ -729,34 +700,6 @@ video {
   height: 2.25rem;
 }
 
-.h-24 {
-  height: 6rem;
-}
-
-.h-16 {
-  height: 4rem;
-}
-
-.h-20 {
-  height: 5rem;
-}
-
-.h-\[4\.15rem\] {
-  height: 4.15rem;
-}
-
-.h-\[4\.2rem\] {
-  height: 4.2rem;
-}
-
-.h-\[4\.3rem\] {
-  height: 4.3rem;
-}
-
-.h-\[4\.4rem\] {
-  height: 4.4rem;
-}
-
 .h-\[4\.7rem\] {
   height: 4.7rem;
 }
@@ -773,6 +716,10 @@ video {
   width: 2.25rem;
 }
 
+.w-\[4\.15rem\] {
+  width: 4.15rem;
+}
+
 .w-\[8\.15rem\] {
   width: 8.15rem;
 }
@@ -781,20 +728,48 @@ video {
   width: 100%;
 }
 
-.w-20 {
-  width: 5rem;
+.w-24 {
+  width: 6rem;
 }
 
-.w-16 {
-  width: 4rem;
+.w-32 {
+  width: 8rem;
 }
 
-.w-\[4\.15rem\] {
-  width: 4.15rem;
+.w-28 {
+  width: 7rem;
 }
 
-.transform {
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+.w-\[7\.3rem\] {
+  width: 7.3rem;
+}
+
+.w-\[7\.2rem\] {
+  width: 7.2rem;
+}
+
+.w-\[7\.25rem\] {
+  width: 7.25rem;
+}
+
+.w-\[7\.27rem\] {
+  width: 7.27rem;
+}
+
+.w-12 {
+  width: 3rem;
+}
+
+.w-36 {
+  width: 9rem;
+}
+
+.w-40 {
+  width: 10rem;
+}
+
+.w-44 {
+  width: 11rem;
 }
 
 .flex-row {
@@ -850,9 +825,19 @@ video {
   padding-right: 1rem;
 }
 
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
 .px-\[\.85rem\] {
   padding-left: .85rem;
   padding-right: .85rem;
+}
+
+.py-28 {
+  padding-top: 7rem;
+  padding-bottom: 7rem;
 }
 
 .py-4 {
@@ -865,6 +850,21 @@ video {
   padding-bottom: 1.25rem;
 }
 
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
+
+.px-\[2\.7rem\] {
+  padding-left: 2.7rem;
+  padding-right: 2.7rem;
+}
+
+.px-\[2\.65rem\] {
+  padding-left: 2.65rem;
+  padding-right: 2.65rem;
+}
+
 .pb-\[7\.35rem\] {
   padding-bottom: 7.35rem;
 }
@@ -873,8 +873,29 @@ video {
   padding-top: 5rem;
 }
 
+.pb-9 {
+  padding-bottom: 2.25rem;
+}
+
+.pb-7 {
+  padding-bottom: 1.75rem;
+}
+
+.pb-5 {
+  padding-bottom: 1.25rem;
+}
+
+.pb-4 {
+  padding-bottom: 1rem;
+}
+
 .font-GT-America {
   font-family: GT America Trial, sans-serif;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .text-\[1\.29rem\] {
@@ -893,6 +914,41 @@ video {
   font-size: 2rem;
 }
 
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.text-\[1\.7rem\] {
+  font-size: 1.7rem;
+}
+
+.text-\[1\.5rem\] {
+  font-size: 1.5rem;
+}
+
+.text-\[1\.6rem\] {
+  font-size: 1.6rem;
+}
+
+.text-\[1\.4rem\] {
+  font-size: 1.4rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
+.font-bold {
+  font-weight: 700;
+}
+
 .font-medium {
   font-weight: 500;
 }
@@ -905,6 +961,26 @@ video {
   font-weight: 100;
 }
 
+.font-extrabold {
+  font-weight: 800;
+}
+
+.font-\[750\] {
+  font-weight: 750;
+}
+
+.font-\[780\] {
+  font-weight: 780;
+}
+
+.font-\[800\] {
+  font-weight: 800;
+}
+
+.font-\[790\] {
+  font-weight: 790;
+}
+
 .leading-10 {
   line-height: 2.5rem;
 }
@@ -913,9 +989,18 @@ video {
   letter-spacing: -.25rem;
 }
 
+.tracking-tight {
+  letter-spacing: -0.025em;
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .shadow-\[0px_7px_20px_2px_\#b9c3cc\] {
