--- a/public/output.css
+++ b/public/output.css
@@ -631,16 +631,24 @@ video {
   margin-left: 5.5rem;
 }
 
-.mr-10 {
-  margin-right: 2.5rem;
-}
-
 .mr-6 {
   margin-right: 1.5rem;
 }
 
+.mr-7 {
+  margin-right: 1.75rem;
+}
+
 .mr-\[\.5rem\] {
   margin-right: .5rem;
+}
+
+.mt-1 {
+  margin-top: 0.25rem;
+}
+
+.mt-5 {
+  margin-top: 1.25rem;
 }
 
 .mt-\[\.35rem\] {
@@ -659,16 +667,48 @@ video {
   margin-top: 3.12rem;
 }
 
-.mr-9 {
-  margin-right: 2.25rem;
+.ml-3 {
+  margin-left: 0.75rem;
 }
 
-.mr-8 {
-  margin-right: 2rem;
+.mt-2 {
+  margin-top: 0.5rem;
 }
 
-.mr-7 {
-  margin-right: 1.75rem;
+.mt-\[\.1rem\] {
+  margin-top: .1rem;
+}
+
+.mt-4 {
+  margin-top: 1rem;
+}
+
+.mt-\[1\.2rem\] {
+  margin-top: 1.2rem;
+}
+
+.mt-16 {
+  margin-top: 4rem;
+}
+
+.mt-28 {
+  margin-top: 7rem;
+}
+
+.mt-24 {
+  margin-top: 6rem;
+}
+
+.mt-20 {
+  margin-top: 5rem;
+}
+
+.mt-\[5\.5rem\] {
+  margin-top: 5.5rem;
+}
+
+.mt-\[5\.7rem\] {
+  margin-top: 5.7rem;
 }
 
 .flex {
@@ -704,8 +744,16 @@ video {
   height: 4.7rem;
 }
 
+.h-3 {
+  height: 0.75rem;
+}
+
 .w-14 {
   width: 3.5rem;
+}
+
+.w-64 {
+  width: 16rem;
 }
 
 .w-8 {
@@ -720,6 +768,10 @@ video {
   width: 4.15rem;
 }
 
+.w-\[4\.24rem\] {
+  width: 4.24rem;
+}
+
 .w-\[8\.15rem\] {
   width: 8.15rem;
 }
@@ -728,48 +780,52 @@ video {
   width: 100%;
 }
 
-.w-24 {
-  width: 6rem;
+.w-10 {
+  width: 2.5rem;
 }
 
-.w-32 {
-  width: 8rem;
+.w-5 {
+  width: 1.25rem;
 }
 
-.w-28 {
-  width: 7rem;
-}
-
-.w-\[7\.3rem\] {
-  width: 7.3rem;
-}
-
-.w-\[7\.2rem\] {
-  width: 7.2rem;
-}
-
-.w-\[7\.25rem\] {
-  width: 7.25rem;
-}
-
-.w-\[7\.27rem\] {
-  width: 7.27rem;
+.w-16 {
+  width: 4rem;
 }
 
 .w-12 {
   width: 3rem;
 }
 
-.w-36 {
-  width: 9rem;
+.w-1 {
+  width: 0.25rem;
 }
 
-.w-40 {
-  width: 10rem;
+.w-4 {
+  width: 1rem;
 }
 
-.w-44 {
-  width: 11rem;
+.w-6 {
+  width: 1.5rem;
+}
+
+.w-7 {
+  width: 1.75rem;
+}
+
+.w-\[4\.3rem\] {
+  width: 4.3rem;
+}
+
+.w-\[4\.2rem\] {
+  width: 4.2rem;
+}
+
+.w-\[4\.1rem\] {
+  width: 4.1rem;
+}
+
+.transform {
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .flex-row {
@@ -820,14 +876,14 @@ video {
   background-color: rgb(76 95 213 / var(--tw-bg-opacity));
 }
 
+.px-12 {
+  padding-left: 3rem;
+  padding-right: 3rem;
+}
+
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
-}
-
-.px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
 }
 
 .px-\[\.85rem\] {
@@ -850,19 +906,8 @@ video {
   padding-bottom: 1.25rem;
 }
 
-.px-10 {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
-}
-
-.px-\[2\.7rem\] {
-  padding-left: 2.7rem;
-  padding-right: 2.7rem;
-}
-
-.px-\[2\.65rem\] {
-  padding-left: 2.65rem;
-  padding-right: 2.65rem;
+.pb-\[\.9rem\] {
+  padding-bottom: .9rem;
 }
 
 .pb-\[7\.35rem\] {
@@ -871,22 +916,6 @@ video {
 
 .pt-20 {
   padding-top: 5rem;
-}
-
-.pb-9 {
-  padding-bottom: 2.25rem;
-}
-
-.pb-7 {
-  padding-bottom: 1.75rem;
-}
-
-.pb-5 {
-  padding-bottom: 1.25rem;
-}
-
-.pb-4 {
-  padding-bottom: 1rem;
 }
 
 .font-GT-America {
@@ -898,12 +927,20 @@ video {
   line-height: 2rem;
 }
 
+.text-\[1\.28rem\] {
+  font-size: 1.28rem;
+}
+
 .text-\[1\.29rem\] {
   font-size: 1.29rem;
 }
 
 .text-\[1\.45rem\] {
   font-size: 1.45rem;
+}
+
+.text-\[1\.51rem\] {
+  font-size: 1.51rem;
 }
 
 .text-\[2\.5rem\] {
@@ -914,39 +951,8 @@ video {
   font-size: 2rem;
 }
 
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
-
-.text-\[1\.7rem\] {
-  font-size: 1.7rem;
-}
-
 .text-\[1\.5rem\] {
   font-size: 1.5rem;
-}
-
-.text-\[1\.6rem\] {
-  font-size: 1.6rem;
-}
-
-.text-\[1\.4rem\] {
-  font-size: 1.4rem;
-}
-
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
-.font-bold {
-  font-weight: 700;
 }
 
 .font-medium {
@@ -961,26 +967,6 @@ video {
   font-weight: 100;
 }
 
-.font-extrabold {
-  font-weight: 800;
-}
-
-.font-\[750\] {
-  font-weight: 750;
-}
-
-.font-\[780\] {
-  font-weight: 780;
-}
-
-.font-\[800\] {
-  font-weight: 800;
-}
-
-.font-\[790\] {
-  font-weight: 790;
-}
-
 .leading-10 {
   line-height: 2.5rem;
 }
@@ -993,14 +979,19 @@ video {
   letter-spacing: -0.025em;
 }
 
+.text-\[\#242424\] {
+  --tw-text-opacity: 1;
+  color: rgb(36 36 36 / var(--tw-text-opacity));
+}
+
+.text-blue-200 {
+  --tw-text-opacity: 1;
+  color: rgb(76 95 213 / var(--tw-text-opacity));
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-black {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .shadow-\[0px_7px_20px_2px_\#b9c3cc\] {
